deploy-strategies/bluegreen-with-istio/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tetris-vs
spec:
  hosts:
    - a5353f59049d948d38e38139e0b808b9-1712396770.us-east-2.elb.amazonaws.com
  gateways:
    - tetris-gateway
  http:
    - timeout: 5s
      match:
      - uri:
          prefix: /

      route:
        - destination:
            host: tetris
            subset: green
          weight: 100

      #mirror:
       #host: tetris
       #subset: blue
      #mirrorPercentage:
       #value: 100
